Fixed some minor bugs found by FindBugs. I hope this didn't break anything. :)